--- a/frontend/index.html
+++ b/frontend/index.html
@@ -42,6 +42,33 @@
         font-family: 'Lora', Georgia, serif;
       }
       a { color: var(--forest); }
+
+      /* ── Mobile responsive ── */
+      @media (max-width: 640px) {
+        /* Auth: hide decorative panel, show form full-screen */
+        .auth-panel { display: none !important; }
+        .auth-form-side { padding: 24px 16px !important; }
+        .auth-card { padding: 28px 20px !important; }
+
+        /* Header: remove fixed height, tighten padding */
+        .app-header { height: auto !important; min-height: 52px; padding: 10px 16px !important; flex-wrap: wrap; }
+        .app-nav { gap: 8px !important; }
+        .nav-divider { display: none !important; }
+        .nav-user { display: none !important; }
+
+        /* Dashboard: new list row stacks vertically */
+        .create-row { flex-direction: column !important; }
+
+        /* ListDetail: add item form stacks vertically */
+        .add-form { flex-direction: column !important; }
+        .add-form > * { flex: 0 0 auto !important; width: 100% !important; }
+
+        /* Page main: tighter padding */
+        .page-main { padding: 20px 12px !important; }
+
+        /* Borrow requests tabs: stretch to fill */
+        .tabs-container button { flex: 1 !important; justify-content: center !important; }
+      }
     </style>
   </head>
   <body>
