Fix mobile margin

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -50,8 +50,8 @@
         .auth-form-side { padding: 24px 16px !important; }
         .auth-card { padding: 28px 20px !important; }
 
-        /* Header: remove fixed height, tighten padding */
-        .app-header { height: auto !important; min-height: 52px; padding: 10px 16px !important; flex-wrap: wrap; }
+        /* Header: remove fixed height, add breathing room */
+        .app-header { height: auto !important; min-height: 52px; padding: 10px 20px !important; flex-wrap: wrap; }
         .app-nav { gap: 8px !important; }
         .nav-divider { display: none !important; }
         .nav-user { display: none !important; }
@@ -63,8 +63,8 @@
         .add-form { flex-direction: column !important; }
         .add-form > * { flex: 0 0 auto !important; width: 100% !important; }
 
-        /* Page main: tighter padding */
-        .page-main { padding: 20px 12px !important; }
+        /* Page main: comfortable side margins */
+        .page-main { padding: 24px 20px !important; }
 
         /* Borrow requests tabs: stretch to fill */
         .tabs-container button { flex: 1 !important; justify-content: center !important; }
