--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,70 +4,71 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <title>Rallebola — Farm Inventory</title>
+    <title>Rallebola</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Material+Icons+Outlined" rel="stylesheet" />
     <style>
       *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
       :root {
-        --forest-dark:   #4D6E3A;
-        --forest:        #6B9652;
-        --forest-mid:    #89B86E;
-        --forest-light:  #B8D89C;
-        --forest-pale:   #E0EED0;
-        --bark:          #9B7A5A;
-        --bark-light:    #C4A882;
-        --wheat:         #D4A84A;
-        --wheat-light:   #EAC870;
-        --wheat-pale:    #F5E4B0;
-        --cream:         #F7F2E8;
-        --parchment:     #F2EAD8;
-        --paper:         #FDFCF8;
-        --border:        #DDD0B0;
-        --border-light:  #EDE6D4;
-        --text:          #3C2A18;
-        --text-mid:      #6E4E30;
-        --text-muted:    #A08060;
-        --red:           #C46A5A;
-        --red-pale:      #FBEEE8;
-        --red-border:    #F0C4BC;
+        --bg:              #F8FAFC;
+        --surface:         #FFFFFF;
+        --surface-hover:   #F9FAFB;
+        --border:          #E5E7EB;
+        --border-strong:   #D1D5DB;
+        --text:            #111827;
+        --text-muted:      #6B7280;
+        --text-dim:        #9CA3AF;
+        --accent:          #16A34A;
+        --accent-hover:    #15803D;
+        --accent-surface:  #F0FDF4;
+        --accent-border:   #BBF7D0;
+        --accent-text:     #FFFFFF;
+        --amber:           #D97706;
+        --amber-surface:   #FFFBEB;
+        --amber-border:    #FDE68A;
+        --red:             #DC2626;
+        --red-surface:     #FEF2F2;
+        --red-border:      #FECACA;
       }
       body {
         font-family: 'Inter', system-ui, sans-serif;
-        background: var(--cream);
+        background: var(--bg);
         color: var(--text);
         line-height: 1.5;
+        -webkit-font-smoothing: antialiased;
       }
-      h1, h2, h3, h4 {
-        font-family: 'Lora', Georgia, serif;
+      a { color: var(--accent); }
+      input, textarea, select, button {
+        font-family: 'Inter', system-ui, sans-serif;
       }
-      a { color: var(--forest); }
+      .material-icons-outlined {
+        font-family: 'Material Icons Outlined';
+        font-weight: normal;
+        font-style: normal;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        line-height: 1;
+        text-transform: none;
+        letter-spacing: normal;
+        word-wrap: normal;
+        white-space: nowrap;
+        direction: ltr;
+        -webkit-font-smoothing: antialiased;
+        user-select: none;
+      }
 
       /* ── Mobile responsive ── */
       @media (max-width: 640px) {
-        /* Auth: hide decorative panel, show form full-screen */
-        .auth-panel { display: none !important; }
-        .auth-form-side { padding: 24px 16px !important; }
-        .auth-card { padding: 28px 20px !important; }
-
-        /* Header: remove fixed height, add breathing room */
-        .app-header { height: auto !important; min-height: 52px; padding: 10px 20px !important; flex-wrap: wrap; }
-        .app-nav { gap: 8px !important; }
+        .app-header { height: auto !important; min-height: 52px; padding: 10px 16px !important; flex-wrap: wrap; }
+        .app-nav { gap: 2px !important; }
         .nav-divider { display: none !important; }
         .nav-user { display: none !important; }
-
-        /* Dashboard: new list row stacks vertically */
         .create-row { flex-direction: column !important; }
-
-        /* ListDetail: add item form stacks vertically */
         .add-form { flex-direction: column !important; }
         .add-form > * { flex: 0 0 auto !important; width: 100% !important; }
-
-        /* Page main: comfortable side margins */
-        .page-main { padding: 24px 20px !important; }
-
-        /* Borrow requests tabs: stretch to fill */
+        .page-main { padding: 20px 16px !important; }
         .tabs-container button { flex: 1 !important; justify-content: center !important; }
       }
     </style>
